[Q8q7GXdk] split tests